check_final_2.txt
    Checking twister v0.5.0 (C:\Users\pixel\Downloads\twister)
error[E0433]: cannot find type `Distribution` in this scope
   --> src\ml\point_mamba.rs:147:40
    |
147 |             Tensor::random([128, 128], Distribution::Default, device),
    |                                        ^^^^^^^^^^^^ use of undeclared type `Distribution`
    |
help: consider importing one of these items
    |
 11 + use std::random::Distribution;
    |
 11 + use burn::tensor::Distribution;
    |
 11 + use rand::prelude::Distribution;
    |

error[E0433]: cannot find type `Distribution` in this scope
   --> src\ml\point_mamba.rs:148:35
    |
148 |             Tensor::random([128], Distribution::Default, device),
    |                                   ^^^^^^^^^^^^ use of undeclared type `Distribution`
    |
help: consider importing one of these items
    |
 11 + use std::random::Distribution;
    |
 11 + use burn::tensor::Distribution;
    |
 11 + use rand::prelude::Distribution;
    |

error[E0433]: cannot find type `Distribution` in this scope
   --> src\ml\point_mamba.rs:149:35
    |
149 |             Tensor::random([128], Distribution::Default, device),
    |                                   ^^^^^^^^^^^^ use of undeclared type `Distribution`
    |
help: consider importing one of these items
    |
 11 + use std::random::Distribution;
    |
 11 + use burn::tensor::Distribution;
    |
 11 + use rand::prelude::Distribution;
    |

error[E0433]: cannot find type `Distribution` in this scope
   --> src\ml\point_mamba.rs:150:35
    |
150 |             Tensor::random([128], Distribution::Default, device),
    |                                   ^^^^^^^^^^^^ use of undeclared type `Distribution`
    |
help: consider importing one of these items
    |
 11 + use std::random::Distribution;
    |
 11 + use burn::tensor::Distribution;
    |
 11 + use rand::prelude::Distribution;
    |

warning: unused imports: `Distribution` and `TensorData`
 --> src\ml\mamba_block.rs:2:38
  |
2 | use burn::tensor::{backend::Backend, Distribution, Tensor, TensorData};
  |                                      ^^^^^^^^^^^^          ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Tensor` and `backend::Backend`
  --> src\ml\point_mamba_trainer.rs:13:20
   |
13 | use burn::tensor::{Tensor, backend::Backend};
   |                    ^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `std::error::Error`
  --> src\ml\point_mamba_trainer.rs:15:5
   |
15 | use std::error::Error;
   |     ^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\async_event_handler.rs:181:21
    |
181 |                 let mut error_count = 0u64;
    |                     ----^^^^^^^^^^^
    |                     |
    |                     help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\ml\mamba_block.rs:43:25
    |
 43 |                 .matmul(self.gate_w.clone().unsqueeze_dim::<2>(1));
    |                  ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `3`, found `2`
    |                  |
    |                  arguments to this method are incorrect
    |
    = note: expected struct `burn::Tensor<_, 3>`
               found struct `burn::Tensor<_, 2>`
note: method defined here
   --> C:\Users\pixel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\burn-tensor-0.21.0-pre.2\src\tensor\api\numeric.rs:962:12
    |
962 |     pub fn matmul(self, other: Self) -> Self {
    |            ^^^^^^

warning: unused variable: `r`
   --> src\analysis_mock_data.rs:321:13
    |
321 |         let r = 1.0;
    |             ^ help: if this is intentional, prefix it with an underscore: `_r`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `sample_rate`
   --> src\features\audio.rs:330:47
    |
330 | fn extract_bispectrum_anomaly(buffer: &[f32], sample_rate: f32) -> Vec<f32> {
    |                                               ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sample_rate`

warning: unused variable: `model`
   --> src\ml\wav2vec2_loader.rs:111:5
    |
111 |     model: &Wav2Vec2Model<Wgpu>,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_model`

warning: unused variable: `device`
   --> src\ml\wav2vec2_loader.rs:114:5
    |
114 |     device: &<Wgpu as Backend>::Device,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `n_points`
  --> src\ml\pointnet_encoder.rs:43:14
   |
43 |         let [n_points, _n_features] = points.dims();
   |              ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_n_points`

warning: unused variable: `n_out`
  --> src\ml\pointnet_encoder.rs:69:14
   |
69 |         let [n_out, d_out] = features.dims();
   |              ^^^^^ help: if this is intentional, prefix it with an underscore: `_n_out`

warning: unused variable: `n_points`
  --> src\ml\point_decoder.rs:51:14
   |
51 |         let [n_points, _n_features] = features.dims();
   |              ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_n_points`

warning: unused variable: `n_out`
  --> src\ml\point_decoder.rs:77:14
   |
77 |         let [n_out, d_out] = offsets.dims();
   |              ^^^^^ help: if this is intentional, prefix it with an underscore: `_n_out`

warning: unused variable: `block_idx`
   --> src\ml\point_mamba.rs:101:14
    |
101 |         for (block_idx, block) in self.mamba_blocks.iter().enumerate() {
    |              ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_block_idx`

warning: variable does not need to be mutable
   --> src\visualization\ray_tracer.rs:271:9
    |
271 |     let mut delays_ms: Vec<f32> = all_rays.iter().map(|(_, _, d, _)| *d).collect();
    |         ----^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src\visualization\ray_tracer.rs:276:9
    |
276 |     let mut reflection_delays_32 = histogram_delays(&delays_ms, DELAY_BIN_COUNT);
    |         ----^^^^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

Some errors have detailed explanations: E0308, E0433.
For more information about an error, try `rustc --explain E0308`.
warning: `twister` (lib) generated 15 warnings
error: could not compile `twister` (lib) due to 5 previous errors; 15 warnings emitted
